--- a/kubernetes/persistent-volume.yaml
+++ b/kubernetes/persistent-volume.yaml
@@ -9,6 +9,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: local-storage
   hostPath:
     path: /mnt/data/mongodb
   
