--- a/kubernetes/persistent-volume.yaml
+++ b/kubernetes/persistent-volume.yaml
@@ -7,6 +7,7 @@ spec:
     storage: 8Gi
   accessModes:
     - ReadWriteOnce
+  storageClassName: manual
   persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: /mnt/data/mongodb
