--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -9,7 +9,8 @@ spec:
   ports:
   - port: 27017
     name: mongodb
-    targetPort: 27017
+    targetPort: 27017  
+  clusterIP: None  
   selector:
     app: mongodb
 ---
@@ -33,20 +34,20 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo:latest
+        image: mongo:latest  
         ports:
         - containerPort: 27017
         volumeMounts:
-        - name: mongodb-storage
+        - name: mongodb-storage 
           mountPath: /data/db
         resources:
-            requests:
-              memory: "256Mi"
-              cpu: "250m"
-            limits:
-              memory: "512Mi"
-              cpu: "500m"
-      volumes:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+    volumes:
       - name: mongodb-storage
         persistentVolumeClaim:
           claimName: mongodb-pvc
