--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -47,13 +47,7 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
-  volumeClaimTemplates:  
-  - metadata:
-      name: mongodb-storage  
-    spec:
-      accessModes:
-      - ReadWriteOnce
-      storageClassName: manual 
-      resources:
-        requests:
-          storage: 5Gi
+    volumes: 
+      - name: mongodb-storage
+        persistentVolumeClaim:
+          claimName: mongodb-pvc 
