--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -1,37 +1,20 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongodb-svc
-  namespace: wanderlust
-  labels:
-    app: mongodb
-spec:
-  ports:
-  - port: 27017
-    name: mongodb
-    targetPort: 27017  
-  clusterIP: None   
-  selector:
-    app: mongodb
----
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-  name: mongodb
+  name: mongodb-deployment
   namespace: wanderlust
   labels:
-    app: mongodb
+    app: mongodb 
 spec:
-  serviceName: mongodb-svc
   replicas: 1
   selector:
     matchLabels:
-      app: mongodb  
+      app: mongodb
   template:
     metadata:
       labels:
         app: mongodb
-    spec:  
+    spec:
       containers:
       - name: mongodb
         image: mongo:latest  
@@ -50,4 +33,20 @@ spec:
       volumes: 
       - name: mongodb-storage
         persistentVolumeClaim:
-          claimName: mongodb-pvc
+          claimName: mongodb-pvc 
+      
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: wanderlust
+  name: mongodb-service
+spec:
+  selector:
+    app: mongodb
+  ports:
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
+
