--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -17,12 +17,12 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo:latest  
+        image: mongo
         ports:
-        - containerPort: 27017
+          - containerPort: 27017
         volumeMounts:
-        - name: mongodb-storage 
-          mountPath: /data/db
+          - name: mongodb-storage 
+            mountPath: /data/db
         resources:
           requests:
             memory: "256Mi"
@@ -31,9 +31,9 @@ spec:
             memory: "512Mi"
             cpu: "500m"
       volumes: 
-      - name: mongodb-storage
-        persistentVolumeClaim:
-          claimName: mongodb-pvc 
+        - name: mongodb-storage
+          persistentVolumeClaim:
+            claimName: mongodb-pvc 
       
 ---
 
