--- a/kubernetes/backend.yaml
+++ b/kubernetes/backend.yaml
@@ -16,18 +16,16 @@ spec:
         app: backend
     spec:
       containers:
-        - name: 
+        - name: backend-container
           image: trainwithshubham/wanderlust-backend-beta:v2.1
           ports:
             - containerPort: 8080
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: wanderlust
   name: backend-service
+  namespace: wanderlust
 spec:
   selector:
     app: backend
@@ -35,4 +33,4 @@ spec:
     - protocol: TCP
       port: 32000
       targetPort: 8080
-
+  type: ClusterIP
