--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -16,18 +16,16 @@ spec:
         app: frontend
     spec:
       containers:
-        - name: 
-          image:  trainwithshubham/wanderlust-frontend-beta:v2.2
+        - name: frontend-container
+          image: trainwithshubham/wanderlust-frontend-beta:v2.2
           ports:
             - containerPort: 5173
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: wanderlust
   name: frontend-service
+  namespace: wanderlust
 spec:
   type: NodePort
   selector:
@@ -36,4 +34,4 @@ spec:
     - protocol: TCP
       port: 5173
       targetPort: 5173
-      NodePort: 31000
+      nodePort: 31000
