--- a/kubernetes/Ingress.yaml
+++ b/kubernetes/Ingress.yaml
@@ -8,7 +8,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /wanderlust
+      - path: /
         pathType: Prefix
         backend:
           service:
