--- a/kubernetes/Ingress.yaml
+++ b/kubernetes/Ingress.yaml
@@ -8,8 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "wanderlust.local"
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
@@ -17,4 +16,4 @@ spec:
           service:
             name: frontend-service
             port:
-              number: 80
+              number: 5173
