--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -1,11 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: mongodb-deployment
+  name: mongodb
   namespace: wanderlust
-  labels:
-    app: mongodb 
 spec:
+  serviceName: "mongodb-service"
   replicas: 1
   selector:
     matchLabels:
@@ -17,12 +16,12 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo
+        image: mongo:latest
         ports:
-          - containerPort: 27017
+        - containerPort: 27017
         volumeMounts:
-          - name: mongodb-storage 
-            mountPath: /data/db
+        - name: mongodb-storage
+          mountPath: /data/db
         resources:
           requests:
             memory: "256Mi"
@@ -30,18 +29,23 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
-      volumes: 
-        - name: mongodb-storage
-          persistentVolumeClaim:
-            claimName: mongodb-pvc 
-      
+  volumeClaimTemplates:
+  - metadata:
+      name: mongodb-storage
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: gp2   
+      resources:
+        requests:
+          storage: 5Gi
+
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: wanderlust
   name: mongodb-service
+  namespace: wanderlust
 spec:
   selector:
     app: mongodb
@@ -49,4 +53,4 @@ spec:
     - protocol: TCP
       port: 27017
       targetPort: 27017
-
+  clusterIP: None   
