--- a/kubernetes/mongodb-pv.yml
+++ b/kubernetes/mongodb-pv.yml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mongodb-pv
+  name: mongodb-pv-0
+  labels:
+    pv: mongo-pv-0
 spec:
   capacity:
     storage: 10Gi
