--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -3,8 +3,10 @@ kind: StatefulSet
 metadata:
   name: mongodb
   namespace: wanderlust
+  labels:
+    app: mongodb
 spec:
-  serviceName: "mongodb-service"
+  serviceName: mongodb-svc
   replicas: 1
   selector:
     matchLabels:
@@ -12,7 +14,7 @@ spec:
   template:
     metadata:
       labels:
-        app: mongodb
+        app: mongodb 
     spec:
       containers:
       - name: mongodb
@@ -20,36 +22,39 @@ spec:
         ports:
         - containerPort: 27017
         volumeMounts:
-        - name: mongodb-storage
+        - name: mongodb-storage 
           mountPath: /data/db
         resources:
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
   volumeClaimTemplates:
   - metadata:
-      name: mongodb-storage
+      name: mongo-data
     spec:
-      accessModes: ["ReadWriteOnce"]
-      storageClassName: gp2   # EKS dynamic EBS
+      accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 5Gi
-
+          storage: 10Gi
+      selector:
+        matchLabels:
+          pv: mongo-pv-0   
+      
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb-service
-  namespace: wanderlust
+  name: mongodb-svc
+  namespace: easyshop
+  labels:
+    app: mongodb
 spec:
+  ports:
+    - port: 27017
+      targetPort: 27017
   selector:
     app: mongodb
-  ports:
-    - protocol: TCP
-      port: 27017
-      targetPort: 27017
-  clusterIP: None
+ 
