--- a/kubernetes/mongodb-pv.yml
+++ b/kubernetes/mongodb-pv.yml
@@ -10,6 +10,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: ""
   hostPath:
     path: /mnt/data/mongodb
-  
