--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -14,7 +14,7 @@ spec:
   template:
     metadata:
       labels:
-        app: mongodb 
+        app: mongodb
     spec:
       containers:
       - name: mongodb
@@ -22,15 +22,15 @@ spec:
         ports:
         - containerPort: 27017
         volumeMounts:
-        - name: mongodb-storage 
+        - name: mongo-data
           mountPath: /data/db
         resources:
-            requests:
-              memory: "256Mi"
-              cpu: "250m"
-            limits:
-              memory: "512Mi"
-              cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
   volumeClaimTemplates:
   - metadata:
       name: mongo-data
@@ -38,18 +38,18 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 
+          storage: 10Gi
       storageClassName: ""
       selector:
         matchLabels:
-          pv: mongo-pv-0   
-      
+          pv: mongo-pv-0
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-svc
-  namespace: easyshop
+  namespace: wanderlust
   labels:
     app: mongodb
 spec:
@@ -58,4 +58,3 @@ spec:
       targetPort: 27017
   selector:
     app: mongodb
- 
